tweak colors to be slightly darker, fix border contrast

--- a/packages/browser-sdk/src/toolbar/Toolbar.css
+++ b/packages/browser-sdk/src/toolbar/Toolbar.css
@@ -56,9 +56,9 @@
   --gray500: #787c91;
   --black: #1e1f24;
 
-  --bg-color: hsla(230, 9%, 13%, 0.85);
-  --bg-light-color: hsla(230, 9%, 11%, 0.85);
-  --border-color: hsl(227, 10%, 18%);
+  --bg-color: hsla(230, 9%, 8%, 0.85);
+  --bg-light-color: hsla(230, 9%, 6%, 0.85);
+  --border-color: hsla(0, 0%, 100%, 0.1);
   --bg-blur: 3px;
 
   --logo-color: white;
